lint package.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   "license": "MIT",
   "dependencies": {
     "extend-shallow": "^2.0.1",
-    "opalcss": "^0.0.2",
+    "opalcss": "^0.0.2"
   }
 }
