--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test-jstransformer": "^1.0.0"
   },
   "scripts": {
-    "test": "test-jstransformer",
-    "coverage": "test-jstransformer coverage"
+    "coverage": "test-jstransformer coverage",
+    "test": "test-jstransformer"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "extend-shallow": "^2.0.1",
-    "opalcss": "^0.0.2"
+    "jstransformer-postcss": "^0.4.1",
+    "opalcss": "0.0.2"
   }
 }
